--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- - CSS Stylesheet- -->
     <link rel="stylesheet" href="assets/css/css.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
 
 </head>
 <!-- - [END OF HEAD] ============================================================================================= -->
@@ -18,7 +19,8 @@
 
 <!-- (START OF HEADER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -- - -- - - - -->
 <header>
-    <section class="container" id="head">
+    <section class="container" id="header">
+
 
         <section class="headercontainer">
             <h1>myBlog</h1>
@@ -46,8 +48,11 @@
 
     </section>
     <!-- (END OF NAV) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
 </header>
 <!-- (END OF HEADER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  - - - -- - -->
+
+
 
 <!-- (START OF MAIN) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <main>
@@ -55,25 +60,30 @@
     <section class="container" id="main">
 
 
-        <!-- (START OF NAV) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <section class="container-image" id="image-index">
-
-            <img id="logo" src="assets/images/blog.png">
-
-        </section>
-        <!-- (END OF NAV) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
         <section class="container-content" id="content-index">
+
+            <section class="content">
 
             <p>
                 Suspendisse non lacinia lectus. Fusce pharetra eleifend velit, a vulputate sapien eleifend et.
                 In vehicula tempor est, vitae fringilla metus laoreet ut.
                 Fusce iaculis eu diam congue tempus.
-                Cras consequat mi id eros consequat, sed accumsan ipsum facilisis. Cras semper, lorem et eleifend placerat, lorem ex varius eros, at scelerisque lectus lacus nec risus.
+                Cras consequat mi id eros consequat, sed accumsan ipsum facilisis. Cras semper, lorem et eleifend placerat,
+                lorem ex varius eros, at scelerisque lectus lacus nec risus.
             </p>
+
+            </section>
 
         </section>
 
+
+        <!-- (START OF LOGO) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <section class="container-content" id="image-index">
+
+            <img id="logo" src="assets/images/blog.png">
+
+        </section>
+        <!-- (END OF LOGO) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
     </section>
 
@@ -82,5 +92,20 @@
 
 
 
+<!-- (START OF FOOTER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<footer>
+
+    <section class="container" id="footer">
+
+        <p>
+            Designed by Dineshan Kannan, 2016
+        </p>
+
+    </section>
+
+</footer>
+<!-- (END OF FOOTER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
 </body>
+<!-- - [END OF BODY] ============================================================================================= -->
 </html>
