--- a/blog.html
+++ b/blog.html
@@ -1,10 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- - [START OF HEAD] ============================================================================================= -->
 <head>
     <meta charset="UTF-8">
-    <title></title>
+
+    <title>Add Blog Entry Page</title>
+
+    <!-- - CSS Stylesheet- -->
+    <link rel="stylesheet" href="assets/css/css.css" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+
 </head>
+<!-- - [END OF HEAD] ============================================================================================= -->
+
+
+<!-- - [START OF BODY] ============================================================================================= -->
 <body>
 
+<!-- (START OF HEADER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -- - -- - - - -->
+<header>
+    <section class="container" id="header">
+
+
+        <section class="headercontainer">
+            <h1>myBlog</h1>
+            <h3>because the internet needs to know what I think</h3>
+        </section>
+
+
+
+        <!-- (START OF NAV) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+        <section class="headercontainer" id="nav-index">
+
+            <nav>
+
+                <ul>
+                    <li><a href="blog.html">All Blog Items</a> </li>
+                    <li><a href="blog.html">Work Blog Items</a> </li>
+                    <li><a href="blog.html">University Blog Items</a> </li>
+                    <li><a href="blog.html">Family Blog Items</a> </li>
+                    <li><a href="add.html">Insert Blog Items</a> </li>
+                </ul>
+
+            </nav>
+
+        </section>
+
+    </section>
+    <!-- (END OF NAV) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+</header>
+<!-- (END OF HEADER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  - - - -- - -->
+
+
+
+<!-- (START OF MAIN) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<main>
+
+    <section class="container" id="main">
+
+
+        <section class="container-content" id="content-index">
+
+            <section class="content">
+
+                <p>
+                    <section class="title"> entryTitle: Today at work</section>
+
+                    <section class="title">submitter: Adam</section>
+
+                    <section class="title">category: Work</section>
+
+                    <section class="title"> entrySummary: Today I went to work and did lots of very complicated coding things.
+                        I was very pleased that I managed to finish them all
+                    </section>
+
+                </p>
+
+            </section>
+
+        </section>
+
+
+
+    </section>
+
+</main>
+<!-- (END OF MAIN) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+
+
+<!-- (START OF FOOTER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<footer>
+
+    <section class="container" id="footer">
+
+        <p>
+            Designed by Dineshan Kannan, 2016
+        </p>
+
+    </section>
+
+</footer>
+<!-- (END OF FOOTER) - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
 </body>
+<!-- - [END OF BODY] ============================================================================================= -->
 </html>
