--- a/add.html
+++ b/add.html
@@ -74,14 +74,14 @@
                     <textarea required id="entrySummary" name="entrySummary"></textarea>
                     <br>
                     <label for="category">Category:</label>
-                    <select name="category" id="category">
+                    <select required name="category" id="category">
                         <option value="">Select location</option>
                         <option value="politics">Politics</option>
                         <option value="sport">Sport</option>
                         <option value="technology">Technology</option>
                     </select>
                     <label for="submitter">Submited By:</label>
-                    <input required type="text" id="submitter" name="submitter">
+                    <input type="text" id="submitter" name="submitter">
                     <br>
                     <br>
                     <input type="submit" value="Submit" id="submit">
